using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Const : MonoBehaviour
{
    public const string IDLE = "idle";
    public const string ATTACK = "attack";
    public const string WIN = "win";
    public const string DEAD = "dead";
    public const string RUN = "run";
    public const string ULTI = "ulti";
    public const string DANCE = "dance";

    public const string CHARACTER = "Character";
    public const string OBSTACLE = "Obstacle";


}
